# codex-adv

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: quality.yml
config/: router.example.toml
src/codex_adv/: __init__.py  chat.py  classifier.py  cli.py  config.py  debug.py  executor.py  input.py  intent.py  learning.py  rewriters.py  router.py  self_heal.py  ui.py
stories/: brave_kid_save_world.md  coding-adventure.md
tests/: test_classifier.py  test_interrupts.py  test_learning.py  test_router.py  test_self_heal.py  test_sessions.py
