[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-adv"
version = "0.1.0"
description = "Adaptive router for Codex CLI with local/cloud execution, fallback, and learning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rich>=13.7"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
codex-adv = "codex_adv.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
