[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-adv"
version = "0.1.2"
description = "Adaptive router for Codex CLI with local/cloud execution, fallback, and learning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["prompt_toolkit>=3.0.47", "rich>=13.7"]

[project.optional-dependencies]
dev = ["bandit[toml]>=1.7.8", "pytest>=8.0", "ruff>=0.11.0"]

[project.scripts]
codex-adv = "codex_adv.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.bandit]
exclude_dirs = ["tests", "build", ".venv"]
skips = ["B404"]
